added something bottom of the homework

--- a/day01/bicimlendirme-odev.html
+++ b/day01/bicimlendirme-odev.html
@@ -9,6 +9,8 @@
     <h1><strong>TECHPROEDUCATION</strong></h1>
     <h3><strong>&ltOUR MISSION&gt</strong></h3>
     <p>TechProEducation is a <span style="color: red;">coding bootcamp</span> founded in 2019 by a group of passionate IT field experts with <span style="color: red;"><del>10 years</del></span> 11 years of teaching experience. They all have domain <span>knowledge and are actively</span> working in <span style="color: red;"><strong>top Fortune 500 companies</strong></span><sub style="color: green;">1</sub>. As such, they witness industry progression first-hand and update the curricula where needed.</p>
+    <p><strong>HOMEWORK FINISHED</strong></p>
+    <p><em>10.00.2020</em></p>
 
     <br>
     <br>
